[project]
name = "ha-aruba-ap"
version = "0.0.8" # x-release-please-version
requires-python = ">=3.14.4,<3.15"
dependencies = ["puresnmp>=2.0.0"]

[dependency-groups]
test = [
  "pytest-homeassistant-custom-component>=0.13.323",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"

[tool.uv]
package = false
