[project]
name = "ha-aruba-ap"
version = "0.0.11" # x-release-please-version
requires-python = ">=3.14.4,<3.15"
dependencies = ["puresnmp>=2.0.0"]

[dependency-groups]
test = [
  "pytest-homeassistant-custom-component>=0.13.323",
]
dev = [
  { include-group = "test" },
  "mypy>=1.20.0",
]

[tool.mypy]
mypy_path = ["custom_components"]

[[tool.mypy.overrides]]
module = ["puresnmp_plugins.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"

[tool.uv]
package = false
